plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'BoAnGwan'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aspectj'  // AOP (Spring Boot 4.x)
    implementation 'org.springframework.retry:spring-retry:2.0.12'        // @Retryable, @Backoff
    implementation 'org.springframework.boot:spring-boot-starter-jackson' // ObjectMapper (Spring Boot 4.x)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient

    // DB
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // RSS 파서
    implementation 'com.rometools:rome:2.1.0'

    // 편의
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test' // @DataJpaTest (Spring Boot 4.x)
    testImplementation 'io.projectreactor:reactor-test'
    runtimeOnly 'com.h2database:h2' // 테스트용
}

tasks.named('test') {
    useJUnitPlatform()
}
